feat: finished 0.3 version

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -46,7 +46,7 @@
       </div>
       
       <div class='column no-select'>
-        <span>免登录复制</span>
+        <span>免登录复制(开启/关闭需刷新网页)</span>
         <input id='login-free-copy' type='checkbox'>
       </div>
       
